--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/curso-angular-portfolio",
+            "outputPath": "dist/ProjetoAngular",
+            "baseHref": "/ProjetoAngular/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "97eac7e4-775b-4ee7-ae11-771beab95610"
   }
 }
